# pyNFFT

./: .clang-format  .gitignore  .travis.yml  AUTHORS  CHANGELOG.txt  CONTRIBUTING  COPYING  ChangeLog  MANIFEST.in  Makefile  README  README.rst  _version.py  api.html  changelog.html  changelog.rst  cython_setup.py  genindex.html  index.html  make.bat  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.cfg.template  setup.py  tutorial.html
_sources/: index.txt  tutorial.txt
_sources/api/: nfft.txt  solver.txt
api/: nfft.html  solver.html  util.html
doc/: Makefile  api.rst  changelog.rst  conf.py  index.rst  installation.rst  make.bat  tutorial.rst
doc/api/: nfft.rst  solver.rst  util.rst
doc/source/: api.rst  conf.py  index.rst  tutorial.rst
doc/source/api/: nfft.rst  solver.rst  util.rst
pynfft/: __init__.py  _nfft.cpp  _nfft.pxd  _nfft.pyx  _nfft_adaptor.hpp  _nfft_impl.hpp  _util.hpp  _version.py  cfftw3.pxd  cnfft3.pxd  cnfft3util.pxd  linop.py  mv_plan.pxd  mv_plan.pyx  nfct_plan.pxd  nfct_plan.pyx  nfft.c  nfft.pxd  nfft.py  nfft.pyx  nfft_plan.pxd  nfft_plan.pyx  nfsft.pxd  nfsft.pyx  solver.c  solver.pxd  solver.py  solver.pyx  solver_plan.pyx  threading.c  util.c  util.py  util.pyx  version.py
pynfft/tests/: test_nfft.py  test_nfsft.py
tests/: simple_test_nfft_1d_32.txt  simple_test_nfft_1d_64.txt  simple_test_nfft_2d_32.txt  simple_test_nfft_2d_64.txt  test_nfft.py  test_nfft_base.py  test_nfft_errors.py
