[metadata]
name = pyNFFT
description = A pythonic wrapper around NFFT
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Ghislain Vaillant
author_email = ghisvail@gmail.com
license = GPLv3+
license_file = COPYING.txt
url = https://github.com/pynfft/pyNFFT.git
download_url = https://github.com/pynfft/pyNFFT/archive/master.zip
platforms = Linux, Unix
keywords = research, development, mathematics, prototyping, imaging, tomography
# See https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Operating System :: MacOS :: MacOS X
    Operating System :: Unix
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Multimedia :: Sound/Audio :: Analysis


[options]
install_requires =
    setuptools >=39.2.0
    numpy >=1.11
    scipy
build_requires =
    pybind11 >=2.2
    numpy >=1.11
zip_safe = False

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1

[upload_sphinx]
upload-dir = doc/build/html

[aliases]
test = pytest